Pass pitch from drmmode_crtc_scanout_allocate to drmmode_create_bo_pixmap

radeon_bo_get_tiling can fail, e.g. for linear BOs.

Fixes TearFree not working in those cases.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=97873
Fixes: 040a7b80e1fc ("Explicitly set the fbcon pixmap pitch again")
Reviewed-by: Alex Deucher <alexander.deucher@amd.com>